--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   provider: ^6.1.2
   google_fonts: ^6.2.1
   smooth_page_indicator: ^1.1.0
+  dio: ^5.4.0
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
